--- a/.github/workflows/publishtopages.yml
+++ b/.github/workflows/publishtopages.yml
@@ -17,9 +17,9 @@ jobs:
 
       - name: Install Emacs 28
         run: |
-          sudo add-apt-repository ppa:kelleyk/emacs
+          sudo add-apt-repository ppa:ubuntuhandbook1/emacs
           sudo apt-get update
-          sudo apt-get install emacs28
+          sudo apt-get install emacs
 
       - name: Build the site
         run: ./build.sh
